--- a/Exercise - 8/index.html
+++ b/Exercise - 8/index.html
@@ -4,7 +4,25 @@
     <head>
         <meta charset="UTF-8">
         <title>Selectors</title>
-        <link>
+        <link rel="stylesheet" href="./style.css">
     </head>
+    <body>
+        <div class="content">
+            <div>
+                <h1>Selector types</h1>
+            </div>
+            <div>
+                <ul>
+                    <li>General selctor </li>
+                    <li>Class selctor </li>
+                    <li>Id selctor</li>
+                    <li draggable="true">Attribute selctor </li>
+                    <li draggable="false">Universal selctor </li>
+                </ul>
+            </div>
+
+        </div>
+
+    </body>
 
 </html>
