--- a/Exercise - 9/index.html
+++ b/Exercise - 9/index.html
@@ -8,10 +8,20 @@
     </head>
     <body>
         <div class="inner-box">
-            <h1> Combing Selectors</h1>
-            <p>I am paragrph one.</p>
+            <h1 class=header id="version_1"> Combing Selectors</h1>
+            <p class="summary">The 4 combaing types .</p>
         </div>
-        <p>I am paragrph two.</p>
+        <div>
+            <ol>
+                <li value="2"> Group.</li>
+                <li value="3" id="important"> Childe.</li>
+                <li> Descendant.</li>
+                <li> Chaining.</li>
+
+            </ol>
+            <p>I am paragrph two.</p>
+        </div>
+
         <footer>
             create by omri chen yosef
         </footer>
