Exercise 11 Display mode

--- a/Exercise - 11/index.html
+++ b/Exercise - 11/index.html
@@ -11,12 +11,12 @@
             <p>I'm a Block mode</p>
         </div>
         <div class="layout-two">
-            <p>I'm a inline mode</p>
+            <p>I'm an inline mode</p>
             <p>I'm a inline mode too</p>
         </div>
         <div class="layout-three">
-            <p>I'm a inline-block</p>
-            <p>I'm a inline-block too</p>
+            <p>I'm an inline-block</p>
+            <p>I'm an inline-block too</p>
         </div>
     </body>
 
